--- a/views/survey_match_templates.xml
+++ b/views/survey_match_templates.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Standalone template for match following question rendering -->
+    <!-- Template for match following questions in survey -->
     <template id="match_following_question_template" name="Match Following Question">
         <div class="js_match_following match_following_container" 
-             t-att-data-question-id="question.id">
+             t-att-data-question-id="question.id"
+             t-att-data-shuffle-left="question.shuffle_left_options"
+             t-att-data-shuffle-right="question.shuffle_right_options">
             <div class="row">
                 <div class="col-md-6">
                     <h5>Items</h5>
@@ -30,34 +32,13 @@
         </div>
     </template>
     
-    <!-- Inject our JavaScript and CSS to handle match following questions -->
-    <template id="match_following_assets" inherit_id="survey.layout">
-        <xpath expr="//head" position="inside">
+    <!-- Extend survey core templates to inject our template -->
+    <template id="survey_question_type_extend" inherit_id="survey.survey_fill_form_page">
+        <xpath expr="//div[hasclass('o_survey_form')]" position="inside">
             <script type="text/javascript">
                 $(document).ready(function() {
-                    // Wait for survey to be fully rendered
+                    // Find questions of type match_following and initialize them
                     setTimeout(function() {
-                        // Find survey questions in the page
-                        $('.js_question-wrapper').each(function() {
-                            var $question = $(this);
-                            // Check if it might be a match following question
-                            var type = $question.data('questionType') || '';
-                            
-                            if (type === 'match_following' || $question.find('.match_following_container').length > 0) {
-                                console.log('Found match following question, initializing...');
-                                
-                                // Create match following container if needed
-                                if ($question.find('.match_following_container').length === 0) {
-                                    var questionId = $question.data('questionId');
-                                    var surveyToken = window.location.pathname.split('/').filter(Boolean).pop();
-                                    
-                                    // Fetch question data via AJAX if needed
-                                    // For now, we'll just use a placeholder
-                                    console.log('Match following needs initialization for question:', questionId);
-                                }
-                            }
-                        });
-                        
                         if (window.customElearnMatchFollowing &amp;&amp; 
                             typeof window.customElearnMatchFollowing.setup === 'function') {
                             window.customElearnMatchFollowing.setup();
@@ -65,6 +46,12 @@
                     }, 500);
                 });
             </script>
+        </xpath>
+    </template>
+    
+    <!-- Add CSS and JS assets for match following -->
+    <template id="match_following_assets" inherit_id="survey.layout">
+        <xpath expr="//head" position="inside">
             <style>
                 .match_following_container {
                     padding: 15px;
@@ -103,15 +90,6 @@
                 .drop-zone-active {
                     background-color: #e8f4ff;
                     border-color: #b8daff;
-                }
-                
-                /* Preview styles */
-                .o_match_following_preview {
-                    background-color: #f8f9fa;
-                    border-radius: 4px;
-                    padding: 15px;
-                    margin-top: 10px;
-                    margin-bottom: 10px;
                 }
             </style>
         </xpath>
